# SudokuSolver

./: .gitignore  README.md  pyproject.toml
apps/core/: urls.py
apps/core/helpers/: sudoku_helper.py
apps/core/services/: main_service.py
apps/core/static/core/css/: sudoku_table_style.css
apps/core/templates/core/: home.html
config/: settings.py
